--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li><a href="ftp://user:password@example.com/myfile.zip">Ссылка на файл на сервере FTP с авторизацией</a></li>
           <li><a href="https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Message_format">Ссылка на фрагмент страницы некоторого сайта</a></li>
           <li><a href="#form">Ссылка на фрагмент текущей страницы</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&t=1">Ссылка с двумя параметрами в URL</a></li>
+          <li><a href="http://example.com/?productid=1234%22">Ссылка с двумя параметрами в URL</a></li>
           <li> Cписок ссылок основной навигации сайта с подписями title <br />
             <ol>
               <li><a href="#links">Ссылки</a></li>
@@ -50,7 +50,7 @@
           <li>
             <a href="http://example.com/">Ссылка, запрещенная для индексации поисковиками</a>
           </li>
-          <li>Lorem ipsum dolor sit amet, <a href="https://artem.grigoriev.gitlab.io/web2/ex.html">consectetur</a>
+          <li>Lorem ipsum dolor sit amet, <a href="https://web4daniilpopov.github.io/ex.html">consectetur</a>
 	          adipiscing elit. Integer tincidunt lorem at egestas feugiat. Quisque ac
 	 					leo nec purus vestibulum aliquet. Proin a massa in turpis aliquam
 	          hendrerit ut vel purus. Nullam odio lorem, lobortis eu quam id, e
@@ -67,7 +67,7 @@
           </li>
           <li>
             <a href="http://google.com/">
-              <img src="f7E7eOVpHVs.jpg" width="150"
+              <img src="https://topgearrussia.ru/data/topgear/preview/2021-02/24/image-3881-1614195699-640x400.jpg" width="150"
    height="150" alt=""></a>
 
           </li>
@@ -199,7 +199,7 @@
     </div>
   </div>
   <footer class="px-5 py-2">
-    (c) GRIGORYEV ARTEM PAVLOVICH 2020
+    (c) DANIIL POPOV AND COMPANY 2021
   </footer>
 </body>
 </html>
