--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header class="p-2">
     <div class="container-lg">
-      <img class="mr-2" src="log.jpg" alt="Logo" style="width: 100px; height: 100px" />
-      <h1 class="header">headWeb</h1>
+      <img class="mr-2" src="https://sun9-77.userapi.com/impg/glyVNUm5fq1fFfz93g267ysMy9OHyUSKaZJibg/8UpDZGfdpXA.jpg?size=1981x1718&quality=96&sign=05ba044fbfebc7fd47fd0ba0103bd5bf&type=album" alt="Logo" style="width: 100px; height: 100px" />
+      <h1 class="header">PivPatrick</h1>
     </div>
   </header>
   <nav class="container-lg mx-auto">
